--- a/index.html
+++ b/index.html
@@ -108,59 +108,92 @@
         <button onclick="validateStudentForm()">Continue</button>
       </section>
 
-      <!-- PAGE 1: Category & Cluster -->
+      <!-- PAGE 1: Categories & Clusters -->
       <section id="page1" style="display: none;">
         <h2>Select Categories and Clusters</h2>
         <p>Select one or more categories and their corresponding clusters to proceed.</p>
 
         <!-- Communication -->
         <div class="category">
-          <input type="checkbox" id="commCheckbox" onclick="toggleDropdown('commClusters')" />
+          <input type="checkbox" id="commCheckbox" onclick="toggleDropdown('commClusters')">
           <label for="commCheckbox">Communication</label>
           <div class="dropdown" id="commClusters" style="display: none;">
-            <label><input type="checkbox" name="cluster" value="Exchanging thoughts, messages, and information effectively">Exchanging thoughts, messages, and information effectively</label>
-            <label><input type="checkbox" name="cluster" value="Demonstrating communication through language">Demonstrating communication through language</label>
+            <label>
+              <input type="checkbox" name="cluster" value="Exchanging thoughts, messages, and information effectively">
+              Exchanging thoughts, messages, and information effectively
+            </label>
+            <label>
+              <input type="checkbox" name="cluster" value="Demonstrating communication through language">
+              Demonstrating communication through language
+            </label>
           </div>
         </div>
 
         <!-- Social -->
         <div class="category">
-          <input type="checkbox" id="socialCheckbox" onclick="toggleDropdown('socialClusters')" />
+          <input type="checkbox" id="socialCheckbox" onclick="toggleDropdown('socialClusters')">
           <label for="socialCheckbox">Social</label>
           <div class="dropdown" id="socialClusters" style="display: none;">
-            <label><input type="checkbox" name="cluster" value="Collaboration skills">Collaboration skills</label>
+            <label>
+              <input type="checkbox" name="cluster" value="Collaboration skills">
+              Collaboration skills
+            </label>
           </div>
         </div>
 
         <!-- Self-Management -->
         <div class="category">
-          <input type="checkbox" id="selfManagementCheckbox" onclick="toggleDropdown('selfManagementClusters')" />
-          <label for="selfManagementCheckbox">Self-Management</label>
-          <div class="dropdown" id="selfManagementClusters" style="display: none;">
-            <label><input type="checkbox" name="cluster" value="Organization skills">Organization skills</label>
-            <label><input type="checkbox" name="cluster" value="Affective skills">Affective skills</label>
-            <label><input type="checkbox" name="cluster" value="Reflection skills">Reflection skills</label>
+          <input type="checkbox" id="selfMgmtCheckbox" onclick="toggleDropdown('selfMgmtClusters')">
+          <label for="selfMgmtCheckbox">Self-Management</label>
+          <div class="dropdown" id="selfMgmtClusters" style="display: none;">
+            <label>
+              <input type="checkbox" name="cluster" value="Organization skills">
+              Organization skills
+            </label>
+            <label>
+              <input type="checkbox" name="cluster" value="Affective skills">
+              Affective skills
+            </label>
+            <label>
+              <input type="checkbox" name="cluster" value="Reflection skills">
+              Reflection skills
+            </label>
           </div>
         </div>
 
         <!-- Research -->
         <div class="category">
-          <input type="checkbox" id="researchCheckbox" onclick="toggleDropdown('researchClusters')" />
+          <input type="checkbox" id="researchCheckbox" onclick="toggleDropdown('researchClusters')">
           <label for="researchCheckbox">Research</label>
           <div class="dropdown" id="researchClusters" style="display: none;">
-            <label><input type="checkbox" name="cluster" value="Information literacy skills">Information literacy skills</label>
-            <label><input type="checkbox" name="cluster" value="Media literacy skills">Media literacy skills</label>
+            <label>
+              <input type="checkbox" name="cluster" value="Information literacy skills">
+              Information literacy skills
+            </label>
+            <label>
+              <input type="checkbox" name="cluster" value="Media literacy skills">
+              Media literacy skills
+            </label>
           </div>
         </div>
 
         <!-- Thinking -->
         <div class="category">
-          <input type="checkbox" id="thinkingCheckbox" onclick="toggleDropdown('thinkingClusters')" />
+          <input type="checkbox" id="thinkingCheckbox" onclick="toggleDropdown('thinkingClusters')">
           <label for="thinkingCheckbox">Thinking</label>
           <div class="dropdown" id="thinkingClusters" style="display: none;">
-            <label><input type="checkbox" name="cluster" value="Critical-thinking skills">Critical-thinking skills</label>
-            <label><input type="checkbox" name="cluster" value="Creative-thinking skills">Creative-thinking skills</label>
-            <label><input type="checkbox" name="cluster" value="Transfer skills">Transfer skills</label>
+            <label>
+              <input type="checkbox" name="cluster" value="Critical-thinking skills">
+              Critical-thinking skills
+            </label>
+            <label>
+              <input type="checkbox" name="cluster" value="Creative-thinking skills">
+              Creative-thinking skills
+            </label>
+            <label>
+              <input type="checkbox" name="cluster" value="Transfer skills">
+              Transfer skills
+            </label>
           </div>
         </div>
 
